memo/memo/tests/fail-cloneable-insufficient-lifetime.stderr
error: lifetime may not live long enough
 --> tests/fail-cloneable-insufficient-lifetime.rs:9:1
  |
 9 | #[memo('a)]
   | ^^^^^^^^^^^ requires that `'b` must outlive `'static`
10 | fn test_insufficient_lifetime<'a, 'b>(x: DataWithLifetime<'b>) -> &'a DataWithLifetime<'b> {
   |                                   -- lifetime `'b` defined here
   |
   = note: this error originates in the attribute macro `memo` (in Nightly builds, run with -Z macro-backtrace for more info)
